<resources>
    <string name="app_name">W2G Playground</string>
    <string name="activity_main__title">Ware2Go Playground</string>
    <string name="activity_main__login_button_title">Login</string>
    <string name="activity_main__scan_item_button_title">Scan Item</string>
    <string name="activity_main__listening_status__not">Not listening</string>
    <string name="activity_main__listening_status__yes">Listening…</string>

    <string name="activity_scan_item__instructions">Please scan %d %s(s)</string>
    <string name="activity_scan_item__success_message">Barcode scanned!</string>
    <string name="activity_scan_item__failure_message">Barcode failed to scan…</string>
    <string name="activity_scan_item__image_description">Current View</string>

    <string name="activity_login__instructions">Please scan your ID badge</string>
    <string name="activity_login__instructions__manual">Please speak your ID number</string>

    <string name="activity_home__id_title">ID</string>
    <string name="activity_home__assigned_at_title">Date Assigned</string>
    <string name="activity_home__order_count_title">Orders</string>
    <string name="activity_home__order_count">%d orders</string>

    <string name="activity_picklist__instructions">Instructions for current step go here</string>
    <string name="activity_picklist__bin_instructions">Configure bins as shown</string>
    <string name="activity_picklist__bin_instructions__secondary">Press or say \"select\" to advance</string>

    <string name="activity_picklist__next_location_instructions">Proceed to location %s</string>
    <string name="activity_picklist__next_location_instructions__secondary">Press or say \"select\" to advance</string>

    <string name="activity_picklist__scan_location_instructions">Scan location (%s)\'s barcode</string>
    <string name="activity_picklist__scan_location_instructions__secondary">Say \"manual\" to manually enter barcode information</string>

    <string name="activity_picklist__scan_items_instructions">Scan %d %s(s)</string>
    <string name="activity_picklist__scan_items_instructions__secondary">Say \"manual override\" to override scanning</string>

    // Location information fragment
    <string name="activity_picklist__location_info__title">Location %s</string>
    <string name="activity_picklist__location_info__instructions_secondary">Press or say \"select\" to begin scanning</string>
    <string name="activity_picklist__location_info__order_title">Order %d</string>
    <string name="activity_picklist__location_info__order_quantity">%d</string>
    <string name="activity_picklist__location_info__item_name">%s</string>


    // Pick List summary page
    <string name="activity_picklist__summary__title">Picklist %s completed!</string>
    <string name="activity_picklist__summary__next_steps">Summary of items picked</string>
    <string name="activity_picklist__summary__order_id">Order %d</string>
    <string name="activity_picklist__summary__item_quantity">%d items</string>
    <string name="activity_picklist__summary_instructions__secondary">Press or say \"select\" to continue picking, or \"logout\" to logout</string>

    <string name="grant_camera_permissions">We need camera permissions.</string>

    <string name="only_on_mseries">This app can only be used on M-Series devices.</string>

    <string name="scanner__failure_message">Oof. Scanner failed!</string>
    <string name="scanner__instructions">Scan a barcode</string>

    <string name="error">Unknown error occurred!</string>

    <string name="small_logo_content_description">Ware2Go Small Logo</string>
    <string name="image_content_description__placeholder">Image content description placeholder</string>
</resources>
