<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:contentDescription="@string/small_logo_content_description"
        app:srcCompat="@drawable/small_logo" />

    <ImageView
        android:id="@+id/listening"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/activity_main__listening_status__yes"
        app:srcCompat="@drawable/ic_microphone_solid" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:nextFocusLeft="@+id/scan_item"
        android:nextFocusRight="@+id/scan_item"
        android:text="@string/activity_main__login_button_title" />

</RelativeLayout>