<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".Activities.ScanItemActivity">

    <ImageView
        android:id="@+id/listening"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/activity_main__listening_status__yes"
        app:srcCompat="@drawable/ic_microphone_solid" />

    <RelativeLayout
        android:id="@+id/outer"
        android:layout_width="500dp"
        android:layout_height="281.25dp"
        android:layout_centerInParent="true"
        android:layout_marginBottom="100dp">

        <FrameLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/ic_check_solid" />

    </RelativeLayout>


    <TextView
        android:id="@+id/instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/activity_scan_item__instructions"
        android:textAlignment="center"
        android:textSize="20sp" />

</RelativeLayout>

